tests/error/not_nn.gw
#! [contains] expression is known to be nonnull
nonnull Object o;
<<< (!o) >>>;
